# Cpp-project

./: .clang-format  CMakeLists.txt  README.md  main.cpp
Serializate/: README.md  main.cpp
Serializate/include/: dump_common.h  dump_my_class.h
TestCase/: CMakeLists.txt  README.md  main.cpp
TestCase/src/: test_case.cpp
include/: common.h  deserial.h  dump_deserial.h  dump_serial.h  my_class.h  serial.h
src/: my_class.cpp
